simplified docker setup

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,17 +3,7 @@ RUN apk update && apk add build-base autoconf automake libtool pkgconfig nasm
 
 WORKDIR /app
 
-COPY ./package*.json ./
-COPY ./gatsby-*.js ./
-ENV GATSBY_TELEMETRY_DISABLED=1
-RUN npm ci
+copy . .
+RUN npm i
 
-FROM node:17-alpine3.12
-WORKDIR /app
-
-COPY --from=builder /app/node_modules ./node_modules
-
-COPY . ./
-
-ENV GATSBY_TELEMETRY_DISABLED=1
-CMD ["ash", "-c", "npm run build && npm run develop"]
+CMD ["npm", "run", "develop"]
